# epub-python-core

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  index.md  manage.py  my-local-sqlite.db  setup.cfg  sonar-project.properties
.github/workflows/: codeql-analysis.yml  django.yml
api/: __init__.py
books/: authentication.py  models.py  serializers.py  tests.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_book_categories.py  0003_book_label.py  0004_book_folder.py  0005_auto_20220105_1755.py
books/tests/: test_book.py  test_category.py  test_folder.py  test_k8s.py  test_label.py  test_log.py  test_permission.py  test_remarks.py
docs/: BaseCommonModel.md  epub_categories.md  epub_folder.md  epub_permission.md
epub/apps/account/: mixins.py  models.py  permissions.py
epub/apps/epub_auth/: apps.py  models.py
epub/apps/epub_categories/: apps.py  urls.py
epub/apps/epub_folders/: apps.py  urls.py
epub/apps/epub_labels/: __init__.py  apps.py  urls.py
epub/apps/epub_logs/: __init__.py  apps.py  filters.py  mixins.py  models.py  serializers.py  urls.py  views.py
epub/apps/epub_permission/: __init__.py  apps.py  mixins.py  permissions.py
epub/conf/: celery_settings.py  settings.py
epub/core/fields/: __init__.py
epub/core/filters/: __init__.py  _content.py
epub/core/http/: mixins.py  paginations.py  renderer.py  response.py
epub/core/log/: __init__.py
epub/core/models/: __init__.py  (+3 more)
epub_python_core/: asgi.py  settings.py  urls.py  wsgi.py
http/: mixins.py
log/: __init__.py
requirements/: base.txt  dev.txt  prod.txt
(+38 files in other folders)
