[metadata]
name = epub-python-core
version = 0.2.26

[options]
packages = find:
install_requires =
  Django >= 3.1.12
  django-model-utils >= 4.1.1
  django-environ >= 0.4.5
  djangorestframework >= 3.11.2
  django-filter >= 2.4.0


[options.packages.find] #optional
exclude=epub_python_core*, books*
